@@ -2,7 +2,7 @@ AC_PREREQ(2.57)
 
 dnl This is the one location where the authoritative version number is stored
 AC_INIT(shellinabox, 2.10, markus@shellinabox.com)
-VCS_REVISION=206
+VCS_REVISION=207
 AC_SUBST(VCS_REVISION)
 AC_DEFINE_UNQUOTED(VCS_REVISION, "${VCS_REVISION}",
                    [Most recent revision number in the version control system])
@@ -60,6 +60,16 @@ AC_TRY_LINK([#include <math.h>],
             [isnan(0.0);],
             [AC_DEFINE(HAVE_ISNAN, 1,
                        Define to 1 if you have support for isnan)])
+
+dnl Even if utmpx.h exists, not all systems have support for updwtmpx()
+AC_TRY_LINK([#include <utmp.h>],
+            [updwtmp(0, 0);],
+            [AC_DEFINE(HAVE_UPDWTMP, 1,
+                       Define to 1 if you have support for updwtmp)])
+AC_TRY_LINK([#include <utmpx.h>],
+            [updwtmpx(0, 0);],
+            [AC_DEFINE(HAVE_UPDWTMPX, 1,
+                       Define to 1 if you have support for updwtmpx)])
 
 dnl On some systems, calling /bin/login does not work. Disable the LOGIN
 dnl feature, if the user tells us that it does not do the right thing.
